<resources>
    <string name="app_name">ezWord</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_closed">Closed</string>

    <string name="lookup">Look Up!</string>
    <string name="revise">Revise</string>
    <string name="word">Word</string>
    <string name="type">Type</string>
    <string name="definition">Definition</string>
    <string name="others">Others</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="report_bus">Report Bus</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="review_welcome_text">You discovered 20 new words today!\nYou may need to review 24 word now!</string>
    <string name="start_review">Start Review</string>
    <string name="data_not_exist">Database doesn\'t exist</string>
    <string name="notification_sent">Notifications sent.</string>
    <string name="IF_word_not_found">Word not found!</string>
    <string name="sync">Sync</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="about_us_content">Our Info</string>
    <string name="help_content">Here is some help</string>
    <string name="logo">Logo</string>
    <string name="check_answer">Check Answer</string>
    <string name="temp_question">(v)  Do sth wrong</string>
    <string name="answer">Answer</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="status">Status:</string>
    <string name="start_sync">Start Sync</string>
    <string name="today_word">Today Word</string>
    <string name="recent_words">Recent Words</string>
    <string name="sync_status">Sync Status</string>
    <string name="next_question"> Next Question</string>
    <string name="last_look_up">Last Look Up</string>
    <string name="add">Bookmark</string>
    <string name="default_time">30</string>
    <string name="app_name_full">ezWord (Easy Word)</string>
</resources>
