<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_activities.SingleWordActivity">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/word_item_word_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/single_word_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@android:color/white"
            android:background="@android:color/transparent"
            android:padding="@dimen/basic_padding"
            android:layout_margin="@dimen/basic_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/word_item_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/white"
            android:padding="@dimen/basic_padding"
            android:layout_margin="@dimen/basic_margin"
            android:textSize="60sp"
            android:text="@string/word"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/word_item_phonetic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_item_word_layout"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/pronunciation"/>

    <TextView
        android:id="@+id/word_item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_item_phonetic"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/type"/>
    <TextView
        android:id="@+id/word_item_def"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_item_type"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/definition"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:src="@drawable/ic_star_black_24dp"
        android:tint="@color/colorPrimaryDark"
        android:layout_marginTop="172dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>
