<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sub_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/single_word_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        />
    <TextView
        android:id="@+id/word_item_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/white"
        android:padding="@dimen/basic_padding"
        android:layout_margin="@dimen/basic_margin"
        android:paddingStart="56dp"
        android:textSize="60sp"
        android:text="@string/word"/>

    <TextView
        android:id="@+id/word_item_phonetic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_item_word"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/pronunciation"/>

    <TextView
        android:id="@+id/word_item_def"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_item_phonetic"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/definition"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/single_word_bookmark_button"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:src="@drawable/ic_star_black_24dp"
        android:tint="@color/colorPrimaryDark"
        android:padding="@dimen/basic_padding"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>